Added tolerance check to to stop B-M algorithm

--- a/prove/viterbi.ipynb
+++ b/prove/viterbi.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -350,9 +350,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tv/ysw0jsvs2t331mtk7hdh35kc0000gn/T/ipykernel_65691/2882175090.py:12: RuntimeWarning: divide by zero encountered in log\n",
+      "/var/folders/tv/ysw0jsvs2t331mtk7hdh35kc0000gn/T/ipykernel_2460/2882175090.py:12: RuntimeWarning: divide by zero encountered in log\n",
       "  tmp[k] = np.log(pi[k]) + np.log(B[k, observed[0]])\n",
-      "/var/folders/tv/ysw0jsvs2t331mtk7hdh35kc0000gn/T/ipykernel_65691/2882175090.py:21: RuntimeWarning: divide by zero encountered in log\n",
+      "/var/folders/tv/ysw0jsvs2t331mtk7hdh35kc0000gn/T/ipykernel_2460/2882175090.py:21: RuntimeWarning: divide by zero encountered in log\n",
       "  tmp[j, k] = np.log(A[j, k]) + np.log(B[k, observed[i]])\n"
      ]
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -431,9 +431,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tv/ysw0jsvs2t331mtk7hdh35kc0000gn/T/ipykernel_65691/2882175090.py:12: RuntimeWarning: divide by zero encountered in log\n",
+      "/var/folders/tv/ysw0jsvs2t331mtk7hdh35kc0000gn/T/ipykernel_2460/2882175090.py:12: RuntimeWarning: divide by zero encountered in log\n",
       "  tmp[k] = np.log(pi[k]) + np.log(B[k, observed[0]])\n",
-      "/var/folders/tv/ysw0jsvs2t331mtk7hdh35kc0000gn/T/ipykernel_65691/2882175090.py:21: RuntimeWarning: divide by zero encountered in log\n",
+      "/var/folders/tv/ysw0jsvs2t331mtk7hdh35kc0000gn/T/ipykernel_2460/2882175090.py:21: RuntimeWarning: divide by zero encountered in log\n",
       "  tmp[j, k] = np.log(A[j, k]) + np.log(B[k, observed[i]])\n"
      ]
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
      "output_type": "stream",
      "text": [
       "i pinched it out of the skivvy room buck mulligan said it does her all right the aunt always keeps plainlooking servants for malachi lead him not into temptation and her name is ursula laughing again he brought the mirror away from stephen peering eyes the rage of caliban at not seeing his face in a mirror he said if wilde were only alive to see you cracked lookingglass of a servant tell that to the oxy chap downstairs and touch him for a guinea he stinking with money and thinks you are not a gentleman his old fellow made his tin by selling jalap to zulus or some bloody swindle or other god kinch if you and i could only work together we might do something for the island hellenise it young shouts of moneyed voices in clive kempthorpe rooms palefaces they hold their ribs with laughter one clasping another o i shall expire break the news to her gently aubrey i shall die with slit ribbons of his shirt whipping the air he hops and hobbles round the table with trousers down at heels chased by ades of magdalen with the tailor shears a scared face gilded with marmalade i don want to be debagged don t you play the giddy ox with me\n",
-      "q equiymh qf gbf gc fym tzqxxj oggw nbiz wbrrqlsu tsqh qf hgmt ymo srr oqlyf fym sbuf srpsjt zmmet ersqurggzqul tmoxsuft cgo wsrsiyq rmsh yqw ugf qufg fmwefsfqgu suh ymo uswm qt botbrs rsblyqul slsqu ym nogblyf fym wqoogo spsj cogw tfmeymu emmoqul mjmt fym oslm gc isrqnsu sf ugf tmmqul yqt csim qu s wqoogo ym tsqh qc pqrhm pmom gurj srqxm fg tmm jgb iosizmh rggzqullrstt gc s tmoxsuf fmrr fysf fg fym gdj iyse hgputfsqot suh fgbiy yqw cgo s lbqums ym tfquzqul pqfy wgumj suh fyquzt jgb som ugf s lmufrmwsu yqt grh cmrrgp wshm yqt fqu nj tmrrqul asrse fg vbrbt go tgwm nrgghj tpquhrm go gfymo lgh zquiy qc jgb suh q igbrh gurj pgoz fglmfymo pm wqlyf hg tgwmfyqul cgo fym qtrsuh ymrrmuqtm qf jgbul tygbft gc wgumjmh xgqimt qu irqxm zmwefygoem oggwt esrmcsimt fymj ygrh fymqo oqnt pqfy rsblyfmo gum irstequl sugfymo g q tysrr mdeqom nomsz fym umpt fg ymo lmufrj sbnomj q tysrr hqm pqfy trqf oqnngut gc yqt tyqof pyqeequl fym sqo ym yget suh ygnnrmt ogbuh fym fsnrm pqfy fogbtmot hgpu sf ymmrt iystmh nj shmt gc wslhsrmu pqfy fym fsqrgo tymsot s tisomh csim lqrhmh pqfy wsowsrshm q hgu psuf fg nm hmnsllmh hgu f jgb ersj fym lqhhj gd pqfy wm\n"
+      "p dprtzac ph wsh wf hza kxpvvy nwwi lstx isbbpmur kupc ph cwak zan ubb npmzh hza usrh ubguyk xaadk dbuprbwwxprm kanvurhk fwn iubutzp bauc zpi rwh prhw haidhuhpwr urc zan ruia pk snksbu busmzprm umupr za lnwsmzh hza ipnnwn uguy fnwi khadzar daanprm ayak hza numa wf tubplur uh rwh kaaprm zpk futa pr u ipnnwn za kupc pf gpbca gana wrby ubpva hw kaa yws tnutxac bwwxprmmbukk wf u kanvurh habb hzuh hw hza woy tzud cwgrkhupnk urc hwstz zpi fwn u msprau za khprxprm gphz iwray urc hzprxk yws una rwh u marhbaiur zpk wbc fabbwg iuca zpk hpr ly kabbprm qubud hw jsbsk wn kwia lbwwcy kgprcba wn whzan mwc xprtz pf yws urc p twsbc wrby gwnx hwmahzan ga ipmzh cw kwiahzprm fwn hza pkburc zabbarpka ph ywsrm kzwshk wf iwrayac vwptak pr tbpva xaidhzwnda nwwik dubafutak hzay zwbc hzapn nplk gphz busmzhan wra tbukdprm urwhzan w p kzubb aodpna lnaux hza ragk hw zan marhby uslnay p kzubb cpa gphz kbph npllwrk wf zpk kzpnh gzpddprm hza upn za zwdk urc zwllbak nwsrc hza hulba gphz hnwskank cwgr uh zaabk tzukac ly ucak wf iumcubar gphz hza hupbwn kzaunk u ktunac futa mpbcac gphz iuniubuca p cwr gurh hw la calummac cwr h yws dbuy hza mpccy wo gphz ia\n"
      ]
     }
    ],
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,9 +557,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not updating anymore after iteration 37\n"
+     ]
+    }
+   ],
    "source": [
     "B_start = np.zeros((27, 27)) + 1 / 26\n",
     "B_start[:, -1] = np.zeros(27)\n",
@@ -572,6 +580,7 @@
     "    pi=p.normalized_matrix[-1, :],\n",
     "    observed=observed_,\n",
     "    maxIter=50,\n",
+    "    tol = 0.01\n",
     ")\n",
     "mapping = find_mapping(emission.argmax(axis=1))\n",
     "normalized_emission_reconstruction = numbers_to_string(\n",
@@ -581,9 +590,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m B_start[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, :] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros(\u001b[39m27\u001b[39m)\n\u001b[1;32m      4\u001b[0m B_start[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m----> 6\u001b[0m emission_non_norm \u001b[39m=\u001b[39m Baum_Welch(\n\u001b[1;32m      7\u001b[0m     A\u001b[39m=\u001b[39;49mp\u001b[39m.\u001b[39;49mprobability_matrix,\n\u001b[1;32m      8\u001b[0m     B_start\u001b[39m=\u001b[39;49mB_start,\n\u001b[1;32m      9\u001b[0m     pi\u001b[39m=\u001b[39;49mp\u001b[39m.\u001b[39;49mprobability_matrix[\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, :],\n\u001b[1;32m     10\u001b[0m     observed\u001b[39m=\u001b[39;49mobserved_,\n\u001b[1;32m     11\u001b[0m     maxIter\u001b[39m=\u001b[39;49m\u001b[39m50\u001b[39;49m,\n\u001b[1;32m     12\u001b[0m )\n\u001b[1;32m     13\u001b[0m mapping_non_norm \u001b[39m=\u001b[39m find_mapping(emission_non_norm\u001b[39m.\u001b[39margmax(axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m))\n\u001b[1;32m     14\u001b[0m non_normalized_emission_reconstruction \u001b[39m=\u001b[39m numbers_to_string(\n\u001b[1;32m     15\u001b[0m     observed_sequence, invert_mapping(mapping_non_norm)\n\u001b[1;32m     16\u001b[0m )\n",
+      "File \u001b[0;32m~/Documents/Università/Magistrale/Corsi/PML/HMM-for-text-decryption/src/HMM_functions.py:108\u001b[0m, in \u001b[0;36mBaum_Welch\u001b[0;34m(A, B_start, pi, observed, maxIter, tol)\u001b[0m\n\u001b[1;32m    106\u001b[0m \u001b[39mfor\u001b[39;00m it \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(maxIter):\n\u001b[1;32m    107\u001b[0m     alpha_hat, c \u001b[39m=\u001b[39m forward_HMM(A, B, pi, observed)\n\u001b[0;32m--> 108\u001b[0m     beta_hat \u001b[39m=\u001b[39m backward_HMM(A, B, observed, c)\n\u001b[1;32m    109\u001b[0m     gamma \u001b[39m=\u001b[39m compute_all_conditional(alpha_hat, beta_hat)\n\u001b[1;32m    110\u001b[0m     B_old \u001b[39m=\u001b[39m B\n",
+      "File \u001b[0;32m~/Documents/Università/Magistrale/Corsi/PML/HMM-for-text-decryption/src/HMM_functions.py:55\u001b[0m, in \u001b[0;36mbackward_HMM\u001b[0;34m(A, B, observed, c)\u001b[0m\n\u001b[1;32m     53\u001b[0m     \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n_states):\n\u001b[1;32m     54\u001b[0m         \u001b[39mfor\u001b[39;00m k \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n_states):\n\u001b[0;32m---> 55\u001b[0m             beta[i, j] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m A[j, k] \u001b[39m*\u001b[39m B[k, observed[i \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m]] \u001b[39m*\u001b[39m beta_hat[i \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m, k]\n\u001b[1;32m     56\u001b[0m     beta_hat[i] \u001b[39m=\u001b[39m beta[i] \u001b[39m/\u001b[39m c[i \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m]\n\u001b[1;32m     58\u001b[0m \u001b[39mreturn\u001b[39;00m beta_hat\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "B_start = np.zeros((27, 27)) + 1 / 26\n",
     "B_start[:, -1] = np.zeros(27)\n",
@@ -605,16 +628,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tv/ysw0jsvs2t331mtk7hdh35kc0000gn/T/ipykernel_65691/2882175090.py:12: RuntimeWarning: divide by zero encountered in log\n",
+      "/var/folders/tv/ysw0jsvs2t331mtk7hdh35kc0000gn/T/ipykernel_2573/2882175090.py:12: RuntimeWarning: divide by zero encountered in log\n",
       "  tmp[k] = np.log(pi[k]) + np.log(B[k, observed[0]])\n",
-      "/var/folders/tv/ysw0jsvs2t331mtk7hdh35kc0000gn/T/ipykernel_65691/2882175090.py:21: RuntimeWarning: divide by zero encountered in log\n",
+      "/var/folders/tv/ysw0jsvs2t331mtk7hdh35kc0000gn/T/ipykernel_2573/2882175090.py:21: RuntimeWarning: divide by zero encountered in log\n",
       "  tmp[j, k] = np.log(A[j, k]) + np.log(B[k, observed[i]])\n"
      ]
     }
@@ -651,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,23 +701,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Non-normalized emission reconstruction:\n",
-      " i einihed it out of the skizzy room xuik mulligan said it does her all right the aunt always keees elainlooking serzants for malaihi lead him not into temetation and her name is ursula laughing again he xrought the mirror away from steehen eeering eyes the rage of ialixan at not seeing his faie in a mirror he said if wilde were only alize to see you iraiked lookingglass of a serzant tell that to the ody ihae downstairs and touih him for a guinea he stinking with money and thinks you are not a gentleman his old fellow made his tin xy selling aalae to qulus or some xloody swindle or other god kinih if you and i iould only work together we might do something for the island hellenise it young shouts of moneyed zoiies in ilize kemethoree rooms ealefaies they hold their rixs with laughter one ilaseing another o i shall edeire xreak the news to her gently auxrey i shall die with slit rixxons of his shirt whieeing the air he hoes and hoxxles round the taxle with trousers down at heels ihased xy ades of magdalen with the tailor shears a siared faie gilded with marmalade i don want to xe dexagged don t you elay the giddy od with me\n",
-      "Non-normalized reconstruction:\n",
-      " i sinthed it out of the thiver room buth mulligan said it does her all ritht the aunt allars heess thaincoowing sereants for malathe head him not into terstation and her name is ursula lauthing atain he proutht the merror away from steshen seering eres the rate of talilan at not seeing his fate in a merror he said if wilde were only alive to see you trathed loowingghass of a sereant tell that to the ory thas downstairs and touth him for a thinea he stinding with moner and thinds you are not a tentheman his old fellow made his tin by selling walas to bulus or some bloody swindle or other tod hinth if you and i tould only word totether we mitht do something for the ishand hellenise it young thouts of monered coites in thive hersthorse roors salefates ther hold thear rils with lauthter one thassing another o i thall ersire pread the ners to her tenthe auprer i thall die with thit rillons of his thirt whissing the air he hoss and hollles round the talle with trousers down at heels thased by ades of mandalen with the tailor thears a stared fate tilded with marmalade i don want to be depanged don t you thay the tindy or with me\n",
-      "\n",
-      "\n",
       "Normalized emission reconstruction:\n",
-      " i pinchej it out of the skizzy room buck mulligan saij it joes her all right the aunt always keeps plainlooking serzants for malachi leaj him not into temptation anj her name is ursula laughing again he brought the mirror away from stephen peering eyes the rage of caliban at not seeing his face in a mirror he saij if wilje were only alize to see you crackej lookingglass of a serzant tell that to the oxy chap jownstairs anj touch him for a guinea he stinking with money anj thinks you are not a gentleman his olj fellow maje his tin by selling aalap to qulus or some bloojy swinjle or other goj kinch if you anj i coulj only work together we might jo something for the islanj hellenise it young shouts of moneyej zoices in clize kempthorpe rooms palefaces they holj their ribs with laughter one clasping another o i shall expire break the news to her gently aubrey i shall jie with slit ribbons of his shirt whipping the air he hops anj hobbles rounj the table with trousers jown at heels chasej by ajes of magjalen with the tailor shears a scarej face giljej with marmalaje i jon want to be jebaggej jon t you play the gijjy ox with me\n",
+      " i pinchej it out of the skizzy room buck mulligan saij it joes her all right the aunt always keeps plainlooking serzants for malachi leaj him not into temptation anj her name is ursula laughing again he brought the mirror away from stephen peering eyes the rage of caliban at not seeing his face in a mirror he saij if wilje were only alize to see you crackej lookingglass of a serzant tell that to the oxy chap jownstairs anj touch him for a guinea he stinking with money anj thinks you are not a gentleman his olj fellow maje his tin by selling qalap to qulus or some bloojy swinjle or other goj kinch if you anj i coulj only work together we might jo something for the islanj hellenise it young shouts of moneyej zoices in clize kempthorpe rooms palefaces they holj their ribs with laughter one clasping another o i shall expire break the news to her gently aubrey i shall jie with slit ribbons of his shirt whipping the air he hops anj hobbles rounj the table with trousers jown at heels chasej by ajes of magjalen with the tailor shears a scarej face giljej with marmalaje i jon want to be jebaggej jon t you play the gijjy ox with me\n",
       "Normalized reconstruction:\n",
-      " i pinched it out of the skizzy foom buck mulligan said it dous her all right the aunt always keess plainlooking sercants for malachi lead him not into temptation and her name is ursula langhing again he brought the mirror away from steshen peering eres the fave of caliman at not sexing his fave in a mirror he said if wilde were only alive to see you cracked lookingglass of a sercant tell that to the omy chas downstairs and touch him for a buinea he stinking with money and thinks you are not a gentheman his old fellow mave his tin by selling walas to qulus or some bloody swindle or other god kinch if you and i could only work tovether we might do something for the island hellenise it young shouts of monered coices in clive kempthorpe fooms palefaves they hold their rims with langhter one clasping another o i shall expire break the ners to her gently auprey i shall die with blit rimbons of his shirt whipping the air he hous and hombles found the table with trousers down at heels chased by aves of mandalen with the tailor shears a scared fave gilded with marmalave i don want to be demanged don t you play the gindy or with me\n"
+      " i pinched it out of the skizzy foom buck mulligan said it dous her all right the aunt always keess plainlooking sercants for malachi lead him not into temptation and her name is ursula langhing again he brought the mirror away from steshen peering eres the fave of caliman at not sexing his fave in a mirror he said if wilde were only alive to see you cracked lookingglass of a sercant tell that to the omy chas downsthirs and touch him for a buinea he stinking with money and thinks you are not a gentheman his old fellow mave his tin by selling walas to qulus or some bloody swindle or other god kinch if you and i could only work tovether we might do something for the island hellenise it young shouts of monered coices in clive kempthorpe fooms palefaves they hold their rims with langhter one clasping another o i shall expire break the ners to her gently auprey i shall die with blit rimbons of his shirt whipping the air he hous and hombles found the table with trousers down at heels chased by aves of mandalen with the thilor shears a scared fave gilded with marmalave i don want to be demanged don t you play the gindy or with me\n"
      ]
     }
    ],
