New file for plots: comparison_plot

--- a/main_HMM.ipynb
+++ b/main_HMM.ipynb
@@ -953,7 +953,7 @@
     "emission = Baum_Welch(\n",
     "    A=p.normalized_matrix,\n",
     "    B_start=B_start,\n",
-    "    pi=p.probability_matrix[-1, :],\n",
+    "    pi=p.normalized_matrix[-1, :],\n",
     "    observed=observed_,\n",
     "    maxIter=100,\n",
     ")"
