--- a/main_HMM.ipynb
+++ b/main_HMM.ipynb
@@ -24,7 +24,7 @@
     "from src.HMM_utils import convert_numbers_to_letters\n",
     "\n",
     "from src.HMM_functions import Baum_Welch\n",
-    "from src.HMM_functions import compute_f_log, Viterbi_log, reconstruct \n",
+    "from src.HMM_functions import compute_f_log, Viterbi_log, reconstruct\n",
     "\n",
     "import numpy as np"
    ]
@@ -997,7 +997,7 @@
     "# go back to letters to see the results\n",
     "mapping = find_mapping(emission.argmax(axis=1))\n",
     "emission_reconstruction = numbers_to_string(observed_sequence, invert_mapping(mapping))\n",
-    "print(emission_reconstruction)\n"
+    "print(emission_reconstruction)"
    ]
   },
   {
@@ -1005,7 +1005,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let us proceed to apply the Viterbi algorithm to obtain the most likely reconstruction and compare how it performs with the one obtained just by using the emissions."
+    "Now let us proceed to apply the Viterbi algorithm to obtain the most likely reconstruction and compare how it performs with the one obtained just by using the emissions.\n"
    ]
   },
   {
@@ -1047,12 +1047,14 @@
     }
    ],
    "source": [
-    "print(\"emission accuracy:\",\n",
-    "    np.mean(np.array(list(emission_reconstruction))== np.array(list(hidden_sequence)))\n",
+    "print(\n",
+    "    \"emission accuracy:\",\n",
+    "    np.mean(np.array(list(emission_reconstruction)) == np.array(list(hidden_sequence))),\n",
     ")\n",
     "\n",
-    "print(\"Viterbi accuracy:\",\n",
-    "    np.mean(np.array(list(viterbi_reconstruction))== np.array(list(hidden_sequence)))\n",
+    "print(\n",
+    "    \"Viterbi accuracy:\",\n",
+    "    np.mean(np.array(list(viterbi_reconstruction)) == np.array(list(hidden_sequence))),\n",
     ")"
    ]
   },
@@ -1075,9 +1077,9 @@
     }
    ],
    "source": [
-    "print(\"True sequence:\\n\",hidden_sequence)\n",
-    "print(\"Reconstruction from emission:\\n\",emission_reconstruction)\n",
-    "print(\"Reconstruction using Viterbi:\\n\",viterbi_reconstruction)"
+    "print(\"True sequence:\\n\", hidden_sequence)\n",
+    "print(\"Reconstruction from emission:\\n\", emission_reconstruction)\n",
+    "print(\"Reconstruction using Viterbi:\\n\", viterbi_reconstruction)"
    ]
   }
  ],
@@ -1097,7 +1099,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
