Added code to plot double cipher results

--- a/main_MCMC_double_cipher.ipynb
+++ b/main_MCMC_double_cipher.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,6 +351,304 @@
    "source": [
     "cipher_breaker_nstart.generate_animation()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Encode double text comparison on multiple subtexts (same as before)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "from src.CipherBreaker import CipherBreaker\n",
+    "from src.CipherUtils import (\n",
+    "    TextDecoder,\n",
+    "    TextEncoder,\n",
+    "    CipherGenerator,\n",
+    "    TextPreProcessor,\n",
+    ")\n",
+    "from src.ProbabilityMatrix import ProbabilityMatrix\n",
+    "\n",
+    "# Functions needed for the HMM_code\n",
+    "from src.HMM_utils import map_alphabet_to_numbers, string_to_numbers\n",
+    "from src.HMM_utils import find_mapping, numbers_to_string, invert_mapping\n",
+    "from src.HMM_utils import convert_numbers_to_letters\n",
+    "\n",
+    "from src.HMM_functions import Baum_Welch\n",
+    "from src.HMM_functions import compute_f_log, Viterbi_log, reconstruct\n",
+    "\n",
+    "from difflib import SequenceMatcher"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def similar(a, b):\n",
+    "    \"\"\"\n",
+    "    Given two strings a, b it returns a percentage of matching characters among the two\n",
+    "    \"\"\"\n",
+    "\n",
+    "    return np.mean(\n",
+    "        np.array(list(a.replace(\" \", \"\"))) == np.array(list(b.replace(\" \", \"\")))\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def accuracy_varying_text_length(\n",
+    "    subtexts,\n",
+    "    cipher_generator,\n",
+    "    probability_matrix,\n",
+    "    extract_top=5,\n",
+    "    n_iterations=3,\n",
+    "    max_iterations=10000,\n",
+    "    nstart=3,\n",
+    "    maxIter_BM=100,\n",
+    "    tol_BM=10e-3,\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    This function assesses the accuracy of the MCMC decryption + that of the HMM decryption process\n",
+    "    Input:\n",
+    "        - subtexts (list of str): a vector of text of different length\n",
+    "        - cipher_generator (CipherGenerator instance)\n",
+    "        - probability_matrix\n",
+    "        - extract_top(int) : After cipher breaking how many of the top ones we want to retain\n",
+    "        - n_iterations (int) : number of times we want to repeat the encryption-decryption for each text\n",
+    "        - max_iterations (int) : number of iterations in the cipher breaking procedure\n",
+    "        - nstart (int) : number of starting points in the cipher breaking procedure\n",
+    "        - maxIter_BM (int) = number of maximum number of iterations that can be performed by the BM algorithm\n",
+    "        - tol_BM (float) = after no updates larger than this we stop BM algorithm\n",
+    "\n",
+    "    For each subtext it encrypts it and decrypts it n_iteration times.\n",
+    "        Everytime it finishes decrypting it compares the best extract_top (in terms of log likelihood) with the original string,\n",
+    "        and computes the accuracy as the proportion of characters matching for the string which matches best.\n",
+    "        Then for each subtext these are averaged over all n_iterations runs and are stored.\n",
+    "    \"\"\"\n",
+    "    mean_accuracy_MCMC = []\n",
+    "    mean_accuracy_HMM_emission = []\n",
+    "    mean_accuracy_HMM_viterbi = []\n",
+    "\n",
+    "    for subtext in subtexts:\n",
+    "        total_iterations = 0\n",
+    "        total_iterations_HMM_emission = 0\n",
+    "        total_iterations_HMM_viterbi = 0\n",
+    "\n",
+    "        # We run n_iterations ciphers and measure the averge accuracy on those.\n",
+    "        for _ in range(n_iterations):\n",
+    "            cipher = cipher_generator.generate_cipher()\n",
+    "            encoded_text = text_encoder.encode_text_double_cipher(subtext, cipher)\n",
+    "\n",
+    "            ######################################################### MCMC #########################################################\n",
+    "\n",
+    "            # Initialize a code breaker for that encoded message\n",
+    "            cipher_breaker_nstart = CipherBreaker(\n",
+    "                cipher_generator=cipher_generator,\n",
+    "                ciphered_text=encoded_text,\n",
+    "                probability_table=probability_matrix.probability_table,\n",
+    "            )\n",
+    "\n",
+    "            # Break the code and store the extract_top in a dictionary (avoid printing)\n",
+    "            cipher_breaker_nstart.break_cipher_nstart(\n",
+    "                iterations=max_iterations, print_interval=max_iterations, nstart=nstart\n",
+    "            )\n",
+    "            best_dict = cipher_breaker_nstart.extract_best(\n",
+    "                n_extract=extract_top, return_likelihood=True\n",
+    "            )\n",
+    "\n",
+    "            # Extract only the text and store it in a list\n",
+    "            best_dict_text = [t[0] for t in best_dict]\n",
+    "            # print(best_dict_text)\n",
+    "\n",
+    "            # Now we check the percentage of correct ones in the string we matched the most with\n",
+    "            # total_iterations stores the accuracy achieved over all iterations\n",
+    "            total_iterations = total_iterations + max(\n",
+    "                [\n",
+    "                    similar(subtext, best_dict_text[l])\n",
+    "                    for l in range(len(best_dict_text))\n",
+    "                ]\n",
+    "            )\n",
+    "\n",
+    "            ######################################################### HMM #########################################################\n",
+    "            B_start = np.zeros((27, 27)) + 1 / 26\n",
+    "            B_start[:, -1] = np.zeros(27)\n",
+    "            B_start[-1, :] = np.zeros(27)\n",
+    "            B_start[-1, -1] = 1\n",
+    "            observed_ = string_to_numbers(\n",
+    "                encoded_text, mapping=map_alphabet_to_numbers()\n",
+    "            )\n",
+    "\n",
+    "            emission = Baum_Welch(\n",
+    "                A=probability_matrix.normalized_matrix,\n",
+    "                B_start=B_start,\n",
+    "                pi=probability_matrix.normalized_matrix[-1, :],\n",
+    "                observed=observed_,\n",
+    "                maxIter=maxIter_BM,\n",
+    "                tol=tol_BM,\n",
+    "            )\n",
+    "\n",
+    "            # Emission reconstruction\n",
+    "            mapping = find_mapping(emission.argmax(axis=1))\n",
+    "            emission_reconstruction = numbers_to_string(\n",
+    "                encoded_text, invert_mapping(mapping)\n",
+    "            )\n",
+    "\n",
+    "            total_iterations_HMM_emission = total_iterations_HMM_emission + similar(\n",
+    "                subtext, emission_reconstruction\n",
+    "            )\n",
+    "\n",
+    "            # Now we use Viterbi to obtain the most likely one\n",
+    "            f0, f = compute_f_log(\n",
+    "                A=probability_matrix.normalized_matrix, B=emission, observed=observed_\n",
+    "            )\n",
+    "            pmax, phi = Viterbi_log(f0, f)\n",
+    "            reconstruction = reconstruct(pmax, phi)\n",
+    "            reconstruction = reconstruction.astype(int)\n",
+    "            viterbi_reconstruction = convert_numbers_to_letters(reconstruction)\n",
+    "            total_iterations_HMM_viterbi = total_iterations_HMM_viterbi + similar(\n",
+    "                subtext, viterbi_reconstruction\n",
+    "            )\n",
+    "\n",
+    "        mean_accuracy_MCMC.append(total_iterations / n_iterations)\n",
+    "        mean_accuracy_HMM_emission.append(total_iterations_HMM_emission / n_iterations)\n",
+    "        mean_accuracy_HMM_viterbi.append(total_iterations_HMM_viterbi / n_iterations)\n",
+    "\n",
+    "    return mean_accuracy_MCMC, mean_accuracy_HMM_emission, mean_accuracy_HMM_viterbi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_subtexts(path_to_file, lengths):\n",
+    "    \"\"\"\n",
+    "    This function returns the subtext to use to assess accuracy in decryption\n",
+    "\n",
+    "    Input:\n",
+    "        - path_to_file (str) giving the path to the text file\n",
+    "        - lengths (list of int) giving the text lengths to consider\n",
+    "    \"\"\"\n",
+    "\n",
+    "    with open(path_to_file, \"r\") as input_file:\n",
+    "        full_text = input_file.read()\n",
+    "\n",
+    "    full_text = preprocess.lower(full_text)\n",
+    "    unknown_chars = preprocess.unknown_chars(full_text)\n",
+    "    full_text = preprocess.remove_unknown_chars(full_text, unknown_chars=unknown_chars)\n",
+    "    full_text = preprocess.remove_additional_spaces(full_text)\n",
+    "\n",
+    "    subtexts = [\n",
+    "        \" \".join(full_text.split()[: lengths[i]]) for i in range(len(lengths))\n",
+    "    ]  # Contains the ones for the varying lengths\n",
+    "\n",
+    "    return subtexts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lengths = [10, 25, 50, 100, 250, 500, 1000]\n",
+    "# Use it on the Moby Dick text\n",
+    "subtexts = prepare_subtexts(\"texts/moby_dick.txt\", lengths)\n",
+    "\n",
+    "(Moby_Dick_accuracy_MCMC, Moby_Dick_accuracy_HMM_emission, Moby_Dick_accuracy_HMM_viterbi) = accuracy_varying_text_length(subtexts, cipher_generator, probability_matrix)\n",
+    "\n",
+    "\n",
+    "# Use it on the article text\n",
+    "subtexts = prepare_subtexts(\"texts/article_tipping.txt\", lengths)\n",
+    "(article_tipping_accuracy_MCMC, article_tipping_accuracy_HMM_emission, article_tipping_accuracy_HMM_viterbi) = accuracy_varying_text_length(subtexts, cipher_generator, probability_matrix)\n",
+    "\n",
+    "# Use it on the war message text\n",
+    "subtexts = prepare_subtexts(\"texts/eisenhower_speech.txt\", lengths)\n",
+    "(speech_accuracy_MCMC, speech_accuracy_HMM_emission, speech_accuracy_HMM_viterbi) = accuracy_varying_text_length(subtexts, cipher_generator, probability_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Results using MCMC algorithm:\\n\")\n",
+    "print(\"Moby Dick accuracy\", Moby_Dick_accuracy_MCMC)\n",
+    "print(\"Article accuracy\", article_tipping_accuracy_MCMC)\n",
+    "print(\"Eisenhower speech accuracy\", speech_accuracy_MCMC)\n",
+    "\n",
+    "print(\"Results using Emissions assigned by BM algorithm:\\n\")\n",
+    "print(\"Moby Dick accuracy\", Moby_Dick_accuracy_HMM_emission)\n",
+    "print(\"Article accuracy\", article_tipping_accuracy_HMM_emission)\n",
+    "print(\"Eisenhower speech accuracy\", speech_accuracy_HMM_emission)\n",
+    "\n",
+    "print(\"Results using reconstruction given by Viterbi algorithm:\\n\")\n",
+    "print(\"Moby Dick accuracy\", Moby_Dick_accuracy_HMM_viterbi)\n",
+    "print(\"Article accuracy\", article_tipping_accuracy_HMM_viterbi)\n",
+    "print(\"Eisenhower speech accuracy\", speech_accuracy_HMM_viterbi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# Create a list of labels for the x-axis\n",
+    "labels = [str(length) for length in lengths]\n",
+    "print(labels)\n",
+    "\n",
+    "# Set the width of each bar\n",
+    "bar_width = 0.2\n",
+    "\n",
+    "# Set the positions of the bars on the x-axis\n",
+    "x_pos = np.arange(len(labels))\n",
+    "\n",
+    "# Plot the results using a bar plot\n",
+    "plt.bar(\n",
+    "    x_pos - bar_width, Moby_Dick_accuracy_MCMC, bar_width, color=\"r\", label=\"Moby Dick\"\n",
+    ")\n",
+    "plt.bar(\n",
+    "    x_pos,\n",
+    "    article_tipping_accuracy_MCMC,\n",
+    "    bar_width,\n",
+    "    color=\"g\",\n",
+    "    label=\"Newspaper article\",\n",
+    ")\n",
+    "plt.bar(\n",
+    "    x_pos + bar_width, speech_accuracy_MCMC, bar_width, color=\"b\", label=\"1944 Message\"\n",
+    ")\n",
+    "\n",
+    "# Add labels, title, and legend\n",
+    "plt.xlabel(\"Number of words\")\n",
+    "plt.ylabel(\"% of letters decrypted correctly\")\n",
+    "plt.title(\"Decryption Accuracy by Text Length\")\n",
+    "plt.xticks(x_pos, labels)\n",
+    "plt.legend()\n",
+    "\n",
+    "# Display the plot\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -369,7 +667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
