--- a/main_MCMC_double_cipher.ipynb
+++ b/main_MCMC_double_cipher.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,6 +353,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "probability_matrix.compute_normalized_matrix()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -362,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +461,8 @@
     "        # We run n_iterations ciphers and measure the averge accuracy on those.\n",
     "        for _ in range(n_iterations):\n",
     "            cipher = cipher_generator.generate_cipher()\n",
-    "            encoded_text = text_encoder.encode_text_double_cipher(subtext, cipher)\n",
+    "            cipher2 = cipher_generator.generate_cipher()\n",
+    "            encoded_text = text_encoder.encode_text_double_cipher(subtext, cipher, cipher2)\n",
     "\n",
     "            ######################################################### MCMC #########################################################\n",
     "\n",
@@ -533,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
